--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: eslint
 
 # Controls when the action will run. 
 on:
@@ -14,36 +14,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
+  eslint:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x]
-
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: npm login
-        run:
-          npm config set //registry.npmjs.org/:_authToken=$NPM_READONLY_AUTH_TOKEN
-        env:
-          NPM_READONLY_AUTH_TOKEN: ${{ secrets.NPM_READONLY_AUTH_TOKEN }}
-
-      - name: npm install
-        working-directory: ./application
-        run: npm i --ignore-scripts
-
-      - name: Run ESLint
-        uses: ninosaurus/eslint-check@v5
-        with:
-          eslint-config-path: "./application/assets/js/.eslintrc.json"
-          custom-directory: "./application"
-          repo-token: ${{secrets.GITHUB_TOKEN}}
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
