--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: bradennapier/eslint-plus-action@v3
+      env:
+        NPM_TOKEN: ${{secrets.NPM_TOKEN}}
