--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: bradennapier/eslint-plus-action@v3.4.2
+      with: 
+        issueSummaryType: full
+        reportIgnoredFiles: true
